@@ -24,11 +24,12 @@ Suggests:
     doParallel,
     markdown,
     htmltools,
+    xml2,
     xlsx,
     sendmailR,
     knitr,
     rJava,
-    shiny
+    shiny,
 Additional_repositories: http://polmine.sowi.uni-due.de/packages
 VignetteBuilder: knitr
 LazyData: yes
@@ -131,4 +132,4 @@ Collate:
     'view_method.R'
     'weigh_method.R'
     'zzz.R'
-RoxygenNote: 6.0.1
+RoxygenNote: 5.0.1
