@@ -1,1 +1,1 @@
-polmineR Demo General overview over the polmineR package
+polmineR	Introducing core functions of the polmineR package
