@@ -13,6 +13,7 @@ output to RStudio viewer
 * count-method for whole corpus for pAttribute > 1
 * functionality of meta-method merged into sAttributes-method (meta-method dropped)
 * speed improvements for generating html output for reading
+* previously unexported highlight-method now exported, and more robust than before (using xml2)
 
 v0.7.2
 * updated documentation of partition-method.
